# slack-deputy

./: .env.example  .gitignore  Cargo.toml  README.md  manifest.yml
.claude/skills/slack-deputy/: .gitignore  SKILL.md
.claude/skills/slack-deputy-dispatch/: .gitignore  SKILL.md
.claude/skills/slack-deputy-dispatch/references/: worker.md
.claude/skills/slack-deputy/references/: cron.example  reactions.tsv.example  worker.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  confirm.rs  db.rs  inbound.rs  main.rs  outbound.rs  state.rs
